js/js.translator/testData/incremental/invalidation/eagerInitializationMoveBetweenModules/lib1/eagerA.0.kt
@OptIn(kotlin.ExperimentalStdlibApi::class)
@EagerInitialization
val markerA = run { z1 = true; 1 }
